// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button - Unit test > renders correctly 1`] = `
<button
  className="button size-md variant-outline"
/>
`;

exports[`Button - Unit test > size prop 1`] = `
<button
  className="button size-md variant-outline"
/>
`;

exports[`Button - Unit test > variant prop 1`] = `
<button
  className="button size-md variant-solid"
/>
`;
